WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49129
[Qt][WK2] WebKitTestRunner is dead
https://bugs.webkit.org/show_bug.cgi?id=49129
Summary
[Qt][WK2] WebKitTestRunner is dead
Balazs Kelemen
Reported
2010-11-06 12:26:14 PDT
Poor WTR is always crashing on termination. This is a regression since
r71409
. The killer is me. In
r71409
I haved connected the QSharedMemory object's deleteLater slot to QCoreApplication::aboutToQuit to force deletion when the SharedMemory is leaking on termination. The unsafeness of this approach is appearing when the SharedMemory's dtor is called after aboutToQuit had been emitted. In that case we are trying to delete an already deleted object and ending up in a crash. This is the situation in WTR when the UI process is terminating. (Ok, it is not really a UI process).
Attachments
Patch
(1.37 KB, patch)
2010-11-06 14:49 PDT
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
Patch
(1.67 KB, patch)
2010-11-09 04:32 PST
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2010-11-06 14:49:11 PDT
Created
attachment 73177
[details]
Patch
Balazs Kelemen
Comment 2
2010-11-06 14:50:41 PDT
No crashes in run-webkit-tests.
Balazs Kelemen
Comment 3
2010-11-06 18:23:50 PDT
Comment on
attachment 73177
[details]
Patch Clearing flags on attachment: 73177 Committed
r71471
: <
http://trac.webkit.org/changeset/71471
>
Balazs Kelemen
Comment 4
2010-11-06 18:23:58 PDT
All reviewed patches have been landed. Closing bug.
Balazs Kelemen
Comment 5
2010-11-06 18:24:46 PDT
Thanks for the nightly review! :)
Balazs Kelemen
Comment 6
2010-11-09 04:20:32 PST
The ASSERT need to be moved in the if as well... Crashing in fast/frames/iframe-reparenting-new-page.html
Balazs Kelemen
Comment 7
2010-11-09 04:32:13 PST
Created
attachment 73357
[details]
Patch
Andreas Kling
Comment 8
2010-11-09 04:39:06 PST
Comment on
attachment 73357
[details]
Patch D'oh, r=me
Balazs Kelemen
Comment 9
2010-11-09 04:53:52 PST
Comment on
attachment 73357
[details]
Patch Clearing flags on attachment: 73357 Committed
r71624
: <
http://trac.webkit.org/changeset/71624
>
Balazs Kelemen
Comment 10
2010-11-09 04:54:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug