2010-11-06  Balazs Kelemen  <kbalazs@webkit.org>

Reviewed by Andreas Kling.

        [Qt][WK2] WebKitTestRunner is dead
        https://bugs.webkit.org/show_bug.cgi?id=49129

        * Platform/qt/SharedMemoryQt.cpp:
        (WebKit::SharedMemory::~SharedMemory):
        Avoid double deletion when deleteLater has
        already been called.

Canonical link: https://commits.webkit.org/61958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71471 268f45cc-cd09-0410-ab3c-d52691b4dbfc